[package]
name = "pufferfish"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
pest = "2.6"
pest_derive = "2.6"
strum = "0.23"
strum_macros = "0.23"
clap = { version = "4.5.4", features = ["cargo"]}
sdl2 = "0.37.0"
lazy_static = "1.4"
